// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migrate Dataset Failure scenarios Sequential Data Set Should throw an error if a missing data set name is selected 1`] = `
"================Z/OS FILES MIGRATE DATA SET===============
"
`;

exports[`Migrate Dataset Success scenarios Partitioned Data Set Should migrate a data set with wait = true 1`] = `
"================Z/OS FILES MIGRATE DATA SET===============
Data set migraton requested.
"
`;

exports[`Migrate Dataset Success scenarios Sequential Data Set Should migrate a data set with wait = true 1`] = `
"================Z/OS FILES MIGRATE DATA SET===============
Data set migraton requested.
"
`;
